<resources>
    <string name="app_name">Social_Network</string>
    <string name="hint_username">Phone number, username, or email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="log_in_facebook">Log in with Facebook</string>
    <string name="or">OR</string>
    <string name="no_account">Don\'t have an account? Sign up.</string>
    <string name="instagram_from_facebook">Instagram from mấy thằng tày</string>
    <string name="instagram">Instagram</string>
    <string name="sign_up">Sign up</string>
    <string name="register_subtitle">Sign up to see photos and videos from your friends.</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_reg_username">Username</string>
    <string name="hint_reg_password">Password</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_address">Address</string>
    <string name="choose_avatar">Choose avatar</string>
    <string name="avatar_optional">Avatar (optional)</string>
    <string name="avatar_preview">Avatar preview</string>
    <string name="already_account">Already have an account? <b>Log in.</b></string>
</resources>